--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -24,11 +24,12 @@
             android:text="Сумма" />
 
         <EditText
+            android:id="@+id/edit_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:autofillHints=""
-
+            android:inputType="number"
             android:hint="300"
             android:textSize="20sp"
 
@@ -42,6 +43,7 @@
             android:text="Примечание" />
 
         <EditText
+            android:id="@+id/edit_addinfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
@@ -53,11 +55,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:text="Категория" />
-        <TextView
+        <EditText
+            android:id="@+id/edit_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
-            android:text="Еда"
+
             android:textSize="20sp"/>
 
 
@@ -69,13 +72,23 @@
             android:layout_column="0"
             android:layout_gravity="fill"
             android:text="Дата" />
-        <TextView
+        <EditText
+            android:id="@+id/edit_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
-            android:text="Сегодня"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:inputType="date"
+            />
 
     </GridLayout>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:text="Save" />
 
 </LinearLayout>
