--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,63 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_margin="5dp"
-        android:layout_marginBottom="7dp"
-        card_view:cardElevation="2dp"
-        card_view:cardBackgroundColor="@color/background"
-        card_view:cardCornerRadius="3dp"
-        >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
+        android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@android:color/transparent"
-                >
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/title"
                     android:text="title"
-                    android:layout_alignParentLeft = "true"
-                    android:layout_alignParentStart = "true"
-                    android:layout_marginLeft="10dp"
+
                     android:textColor="#7F7F7F"
-                    android:textSize="16sp"
-
-
+                    android:textSize="15sp"
+                    android:textStyle="bold"
                     />
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/date"
                     android:text="date"
-                    android:layout_marginStart="10dp"
+
                     />
-            </LinearLayout>
-            <TextView
+    <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/sum"
                 android:text="sum"
-                android:layout_alignParentRight= "true"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
                 android:textColor="#7F7F7F"
-                android:textSize="16sp"
-
-                />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-
-</RelativeLayout>
+                android:textSize="16sp" />
+            </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
