--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/misterGray"
+
     >
     <GridLayout
         android:layout_width="match_parent"
@@ -14,72 +15,116 @@
         android:columnCount="2"
         android:rowCount="4"
         android:columnOrderPreserved="false"
-
+        android:padding="@dimen/act_add"
         >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
-            android:text="Сумма" />
+            android:gravity="start|center"
+            android:textSize="@dimen/text_20sp"
+            android:typeface="serif"
+            android:text="@string/sum_text_view"
+            android:layout_marginTop="@dimen/act_add"
+
+            />
 
         <EditText
             android:id="@+id/edit_sum"
+            android:gravity="end"
+            android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:autofillHints=""
-            android:inputType="number"
-            android:hint="300"
-            android:textSize="20sp"
-
-
+            android:hint="@string/hint_sum"
+            android:textSize="@dimen/text_20sp"
+            android:paddingRight="@dimen/padding_5dp"
+            android:layout_marginTop="@dimen/act_add"
+            android:maxWidth="@dimen/act_add"
+            android:textStyle="italic"
             />
+
+
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/title"
             android:layout_gravity="fill"
-            android:text="Примечание" />
+            android:gravity="start|center"
+            android:textSize="@dimen/text_20sp"
+            android:typeface="serif"
+            android:layout_marginTop="@dimen/act_add"
+            />
 
         <EditText
             android:id="@+id/edit_addinfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:hint="@string/add_title"
+            android:maxWidth="@dimen/act_add"
+            android:gravity="end"
+            android:textStyle="italic"
             android:layout_gravity="fill"
-            android:hint="Яблоки"
-            android:textSize="20sp"/>
+            android:layout_marginTop="@dimen/act_add"
+            android:paddingRight="@dimen/padding_5dp"
+            android:textSize="@dimen/text_20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/category"
+            android:gravity="start|center"
+            android:textSize="@dimen/text_20sp"
+            android:typeface="serif"
             android:layout_gravity="fill"
-            android:text="Категория" />
-        <EditText
-            android:id="@+id/edit_category"
+            android:layout_marginTop="@dimen/act_add"
+
+           />
+        <Spinner
+            android:id="@+id/spinner_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
+            android:spinnerMode="dropdown"
+            android:layout_marginTop="@dimen/act_add"
+            android:textSize="@dimen/text_20sp"
+            android:textStyle="italic"
+            android:paddingRight="@dimen/padding_5dp"
+            />
 
-            android:textSize="20sp"/>
 
 
-
-        <TextView
+        <Button
+            android:id="@+id/btn_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="0"
+            android:text="@string/date"
+            android:gravity="center_horizontal"
+
+
             android:layout_gravity="fill"
-            android:text="Дата" />
+            android:layout_marginTop="@dimen/act_add"
+
+            />
         <EditText
-            android:id="@+id/edit_date"
+            android:id="@+id/etToday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:hint="@string/add_date"
+            android:maxWidth="@dimen/act_add"
+            android:gravity="end"
             android:layout_gravity="fill"
-            android:textSize="20sp"
-            android:inputType="date"
-            />
+            android:layout_marginTop="@dimen/act_add"
+            android:paddingRight="@dimen/padding_5dp"
+            android:textSize="@dimen/text_20sp"
+            android:textStyle="italic"
+            tools:ignore="GridLayout" />
 
     </GridLayout>
     <Button
@@ -89,6 +134,7 @@
         android:layout_gravity="center"
         android:layout_margin="20dp"
         android:padding="20dp"
-        android:text="Save" />
+
+        android:text="@string/save" />
 
 </LinearLayout>
