--- a/app/src/main/res/layout/fragment_menu_1.xml
+++ b/app/src/main/res/layout/fragment_menu_1.xml
@@ -9,11 +9,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:src="@drawable/ic_add"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:src="@drawable/ic_add_black_24dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
