--- a/app/src/main/res/layout/list_categories.xml
+++ b/app/src/main/res/layout/list_categories.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView
+    android:id="@+id/card_view_cat"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/card_height"
+    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:textSize="20sp"
+           android:textSize="@dimen/card__text"
            android:textStyle="bold"
+           android:padding="@dimen/card_padding"
+
+           android:textAlignment="center"
            android:id="@+id/textViewCategories"
+           android:layout_centerVertical="true"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentStart="true"
            />
    </LinearLayout>
 </androidx.cardview.widget.CardView>
