--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-    <androidx.cardview.widget.CardView
+<RelativeLayout
+    style="@style/Container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/card_height"
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        app:cardCornerRadius="@dimen/card_radius">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_height">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="@dimen/card_height"
+                android:background="@android:color/transparent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/title"
-                    android:text="title"
-
-                    android:textColor="#7F7F7F"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/date"
-                    android:text="date"
-
-                    />
-    <TextView
+            <TextView
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sum"
-                android:text="sum"
+                android:text="@string/transaction_title"
                 android:textColor="#7F7F7F"
-                android:textSize="16sp" />
+                android:textSize="25sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/date"
+                style="@style/DateStyle"
+                android:text="@string/transaction_date"
+                android:textSize="15sp" />
             </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/sum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TextMain"
+                android:padding="@dimen/padding_card"
+                android:text="@string/transaction_sum"
+                android:textColor="#7F7F7F"
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/line_height"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/line" />
+
+
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
+    </RelativeLayout>
